fix visible gap below slant https://github.com/stellar/developers/issues/34

--- a/styles/_slant.scss
+++ b/styles/_slant.scss
@@ -29,5 +29,6 @@
 
 .so-slantContainer {
   position: relative;
+  margin-bottom: -1px;
   overflow: hidden;
 }
